test/files/neg/unreachablechar.check
unreachablechar.scala:5: error: unreachable code
    case 'f' => println("not stuff?");
                       ^
one error found
